--- a/public/Kanbas/Courses/Assignments/Editor/screen.html
+++ b/public/Kanbas/Courses/Assignments/Editor/screen.html
@@ -10,19 +10,19 @@
                     <ul>
                         <li><a href="/Kanbas/Account/Profile/screen.html"> Account</a></li>
                         <li>
-                            <a href="/Kanbas/Dashboard/screen.html">Dashboard</a>
+                            <a href="#">Dashboard</a>
                         </li>
                         <li>
                             <a href="/Kanbas/Courses/Home/screen.html">Courses</a>
                         </li>
                         <li>
-                            <a href="/Kanbas/Calendar/index.html">Calendar</a>
+                            <a href="#">Calendar</a>
                         </li>
-                        <li><a href="/Kanbas/Inbox/index.html">Inbox</a></li>
-                        <li><a href="/Kanbas/History/index.html">History</a></li>
-                        <li><a href="/Kanbas/Studio/index.html">Studio</a></li>
-                        <li><a href="/Kanbas/Commons/index.html">Commons</a></li>
-                        <li><a href="/Kanbas/Help/index.html">Help</a></li>
+                        <li><a href="#">Inbox</a></li>
+                        <li><a href="#">History</a></li>
+                        <li><a href="#">Studio</a></li>
+                        <li><a href="#">Commons</a></li>
+                        <li><a href="#">Help</a></li>
                     </ul>
                 </td>
                 <td valign="top">
@@ -31,40 +31,40 @@
                             <a href="/Kanbas/Courses/Home/screen.html">
                                 Home</a>
                         </li>
-                        <li><a href="/Kanbas/Courses/Modules/screen.html">
+                        <li><a href="#">
                                 Modules</a>
                         </li>
-                        <li><a href="/Kanbas/Courses/Piazza/index.html">
+                        <li><a href="#">
                                 Piazza</a></li>
                         <li>
-                            <a href="/Kanbas/Courses/Zoom Meetings/index.html">
+                            <a href="#">
                                 Zoom Meetings</a>
                         </li>
                         <li><a href="/Kanbas/Courses/Assignments/screen.html">
                                 Assignments</a></li>
-                        <li><a href="/Kanbas/Courses/Quizzes/screen.html">
+                        <li><a href="#">
                                 Quizzes</a></li>
                         <li><a href="/Kanbas/Courses/Grades/screen.html">
                                 Grades</a></li>
-                        <li><a href="/Kanbas/Courses/People/screen.html">
+                        <li><a href="#">
                                 People</a></li>
-                        <li><a href="/Kanbas/Courses/PanaptoVideo/screen.html">
+                        <li><a href="#">
                                 PanaptoVideo</a></li>
-                        <li><a href="/Kanbas/Courses/Discussions/screen.html">
+                        <li><a href="#">
                                 Discussions</a></li>
-                        <li><a href="/Kanbas/Courses/Announcements/screen.html">
+                        <li><a href="#">
                                 Announcements</a></li>
-                        <li><a href="/Kanbas/Courses/Pages/screen.html">
+                        <li><a href="#">
                                 Pages</a></li>
-                        <li><a href="/Kanbas/Courses/Files/index.html">
+                        <li><a href="#">
                                 Files</a></li>
-                        <li><a href="/Kanbas/Courses/Rubrics/screen.html">
+                        <li><a href="#">
                                 Rubrics</a></li>
-                        <li><a href="/Kanbas/Courses/Outcomes/screen.html">
+                        <li><a href="#">
                                 Outcomes</a></li>
-                        <li><a href="/Kanbas/Courses/Collaboration/screen.html">
+                        <li><a href="#">
                                 Collaboration</a></li>
-                        <li><a href="/Kanbas/Courses/Syllabus/screen.html">
+                        <li><a href="#">
                                 Syllabus</a></li>
 
                     </ul>
