--- a/public/Kanbas/Account/Profile/screen.html
+++ b/public/Kanbas/Account/Profile/screen.html
@@ -1,29 +1,31 @@
 <html>
 
-<head></head>
+<head>
+    <link rel="stylesheet" href="/Kanbas/styles.css" />
+    <link rel="stylesheet" href="/Kanbas/Navigation/index.css" />
+    <link rel="stylesheet" href="/libs/font-awesome/css/font-awesome.min.css" />
+</head>
 
 <body>
     <table width="100%">
         <tbody>
             <tr>
                 <td valign="top">
-                    <ul>
-                        <li><a href="/Kanbas/Account/Profile/screen.html"> Account</a></li>
+                    <ul class="wd-kanbas-navigation">
+                        <li><a href="http://northeastern.edu"><img class="wd-navigation-logo" src="/images/neu_logo.png" alt="logo"></a></li>
+                        <li class="wd-active"><a href="/Kanbas/Account/Profile/screen.html"><i class="fa fa-user"></i> Account</a></li>
                         <li>
-                            <a href="#">Dashboard</a>
+                          <a href="/Kanbas/Dashboard/screen.html">
+                            <i class="fa fa-tachometer"></i> Dashboard</a>
                         </li>
-                        <li>
-                            <a href="/Kanbas/Courses/Home/screen.html">Courses</a>
-                        </li>
-                        <li>
-                            <a href="#">Calendar</a>
-                        </li>
-                        <li><a href="#">Inbox</a></li>
-                        <li><a href="#">History</a></li>
-                        <li><a href="#">Studio</a></li>
-                        <li><a href="#">Commons</a></li>
-                        <li><a href="#">Help</a></li>
-                    </ul>
+                        <li><a href="/Kanbas/Courses/Home/screen.html"><i class="fa fa-book"></i> Courses</a></li>
+                        <li><a href="/Kanbas/Groups/screen.html"><i class="fa fa-users"></i> Groups</a></li>
+                        <li><a href="/Kanbas/Calendar/screen.html"><i class="fa fa-calendar"></i> Calendar</a></li>
+                        <li><a href="/Kanbas/Inbox/screen.html"><i class="fa fa-envelope"></i> Inbox</a></li>
+                        <li><a href="/Kanbas/History/screen.html"><i class="fa fa-history"></i> History</a></li>
+                        <li><a href="/Kanbas/Studio/screen.html"><i class="fa fa-paint-brush"></i> Studio</a></li>
+                        <li><a href="/Kanbas/Help/screen.html"><i class="fa fa-question-circle"></i> Help</a></li>
+                      </ul>
                 </td>
                 <td valign="top">
                     <ul>
