--- a/public/index.html
+++ b/public/index.html
@@ -27,13 +27,8 @@
     <title>React App</title>
   </head>
   <body>
-    <h1>Welcome to Web Development!</h1>
-    <ul>
-      <li><a href="/labs/a1/index.html">Assignment 1</a></li>
-      <li><a href="/labs/a2/index.html">Assignment 2</a></li>
-      <li><a href="#">Assignment 3</a></li>
-      <li><a href="/Kanbas/Dashboard/screen.html">Kanbas</a></li>
-    </ul>
-
+    <!-- uncomment the following div and comment out all other content within the body -->
+    <div id="root"></div>
+    <!-- Remove or comment everything else from previous assignments -->
   </body>
 </html>
